web-infras/parser/tests/fixtures/babel/es2022/class-properties/super-inside-function/output.txt
[SyntaxError]: super() is only valid in derived class constructors (3,5)
3|    super.x();
 |   ^
